Fix layout bug for alert/section margin in handheld media query.

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -199,7 +199,7 @@ header#header {
     background-color: #fff;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
 
-    @include media(mobile) {
+    @include media(handheld) {
       margin: 4px 0 0 0;
     }
 
